--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "concurrently \"npm run server\" \"npm start --prefix review_app\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix review_app && INLINE_RUNTIME_CHUNK=false npm run build --prefix review_app"
   },
+ "engines": {
+    "node": "12.18.3"
+  }
   "author": "",
   "license": "ISC",
   "dependencies": {
