added frontend-install script

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "frontend": "npm start --prefix reviews_app",
+    "frontend-install": "npm install --prefix reviews_app",
     "dev": "concurrently \"npm run server\" \"npm start --prefix review_app\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix reviews_app && INLINE_RUNTIME_CHUNK=false npm run build --prefix reviews_app"
   },
